15158
I hope that the summary description is accurate enough. Otherwise an example should better convey the issue:
{code}
  def repeated(s: String*) = 1
  def foo = repeated _
  def method[T](s: T)(implicit m: scala.reflect.Manifest[T]) = s
  method(foo)
{code}

{code}
<console>:9: error: could not find implicit value for parameter m: scala.reflect.Manifest[(String*) => Int]
       method(foo)
             ^
{code}


This issue shows up concretely in specs when using Scala 2.8.0.Beta1 (same thing with the latest nightly): http://code.google.com/p/specs/issues/detail?id=131





